# pico_cam

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/arducam/: arducam.c  arducam.h  hm0360_init.h
lib/echoLocation/: echo_location.c
lib/piFi/: pi_fi.h
lib/picoCam/: pico_cam.c  pico_cam.h
